# npgrad

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
npgrad/: utils.py
npgrad/core/: __init__.py  backprop.py  graph.py  node.py  op.py  order.py
npgrad/ops/: utils.py
tests/: test_version.py
tests/test_core/: test_backprop.py  test_graph.py  test_node.py  test_op.py
tests/test_core/test_graph/: test_graph.py  test_weighted_graph.py
tests/test_ops/: test_utils.py
