[tool.poetry]
name = "npgrad"
version = "0.1.0"
description = ""
authors = ["cospectrum <severinalexeyv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
