[tool.poetry]
name = "npgrad"
version = "0.1.0"
repository = "https://github.com/cospectrum/npgrad"
description = ""
license = "Apache-2.0"
authors = ["cospectrum <severinalexeyv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.2.0"
ruff = "^0.0.258"
pyright = "^1.1.300"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["npgrad", "tests"]
